# blazinit

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENCE.md  README.md  cliff.toml  dist-workspace.toml  install.ps1  install.sh  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets/: registry.toml
assets/registry/: brew.toml  curl.toml  git.toml  metadata.toml  unzip.toml
src/: cli.rs  config.rs  installer.rs  lib.rs  lockfile.rs  logging.rs  main.rs  profile.rs  registry.rs  updater.rs
tests/: cli_tests.rs
