[package]
name = "blazinit"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Guillaume Launay"]

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[[bin]]
name = "blazinit"
