[package]
name = "blazinit"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Guillaume Launay"]

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
dirs-next = "2.0.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[[bin]]
name = "blazinit"
