[package]
name = "blazinit"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Guillaume Launay"]
repository = "https://github.com/launay12u/blazinit"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
dirs-next = "2.0.0"
include_dir = "0.7.4"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "blazinit"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
